--- a/src/plots/styles.scss
+++ b/src/plots/styles.scss
@@ -1,5 +1,5 @@
-#dosesByVaccine-d3,
-#dosesByVaccine-d3 * {
+.restaurant-map-d3,
+.restaurant-map-d3 * {
   letter-spacing: normal !important;
   font-family: Arial, Helvetica, sans-serif !important;
 
